// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart should render a PieChartButton 1`] = `
<PieChartButton
  available={true}
  onClick={[MockFunction]}
  overlayId="pie-chart-popover"
  overlayPlacement="bottom"
/>
`;

exports[`PieChart should render a PieChartIcon with a tooltip 1`] = `
<TooltipTrigger
  label="myToolTip"
  tooltipPlacement="top"
>
  <span>
    <withI18nextTranslation(PieChartIcon)
      display="small"
      label="myToolTip"
      labelIndex={0}
      minimumPercentage={5}
      t={[Function]}
    />
  </span>
</TooltipTrigger>
`;

exports[`decorateWithTooltip should return component with no tooltip 1`] = `
<PieChartButton
  available={true}
  overlayId="pie-chart-popover"
  overlayPlacement="bottom"
/>
`;

exports[`decorateWithTooltip should return component with tooltip 1`] = `
<TooltipTrigger
  label="label"
  tooltipPlacement="top"
>
  <span>
    <PieChartButton
      available={true}
      overlayId="pie-chart-popover"
      overlayPlacement="bottom"
    />
  </span>
</TooltipTrigger>
`;
